# wsl-distrod

./: .gitignore  .help.mk  CHANGELOG.md  LICENSE  Makefile  README.md  install.sh  windows.mk
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  bug_repoty.yml
.github/workflows/: cd.yaml  ci.yaml
cmd/: Cargo.toml
cmd/src/: container.rs  distro.rs  main.rs  multifork.rs  procfile.rs
distro_launcher/: DistroLauncher.sln  LICENSE  README.md  build.bat
distro_launcher/DistroLauncher/: DistributionInfo.cpp  DistributionInfo.h  DistroLauncher.cpp  DistroLauncher.rc  DistroLauncher.vcxproj  DistroLauncher.vcxproj.filters  Helpers.cpp  Helpers.h  WslApiLoader.cpp  WslApiLoader.h  messages.mc  resource.h  stdafx.cpp  stdafx.h
distro_launcher/DistroLauncher-Appx/: DistroLauncher-Appx.vcxproj  DistroLauncher-Appx.vcxproj.filters  Distrod.appxmanifest  MyDistro.appxmanifest
distrod/: Cargo.toml
distrod/common/: Cargo.toml
distrod/common/src/: cli_ui.rs  distro_image.rs  lib.rs  local_image.rs  lxd_image.rs
distrod/distrod/: Cargo.toml
distrod/distrod-exec/: Cargo.toml
distrod/distrod-exec/src/: main.rs
distrod/distrod/resources/: distrod_autostart.xml  schedule_autostart_task.ps1  unschedule_autostart_task.ps1
distrod/distrod/src/: autostart.rs  command_alias.rs  container.rs  distro.rs  lxd_image.rs  main.rs  passwd.rs  procfile.rs  shell_hook.rs  template.rs
distrod/distrod/tests/: integration_test.rs  run_test_inside_distrod.sh  test_runner.sh
distrod/distrod_wsl_launcher/: Cargo.toml
distrod/distrod_wsl_launcher/src/: main.rs  tar_helper.rs  wsl.rs
distrod/libs/: Cargo.toml
distrod/libs/resources/: load_per_user_wsl_envs.sh  wsl_envs_load_profile.sh
distrod/libs/src/: cli_ui.rs  command_alias.rs  container.rs  container_org_image.rs  distro.rs  distro_image.rs  distrod_config.rs  envfile.rs  lib.rs  local_image.rs  lxd_image.rs  mount_info.rs  multifork.rs  passwd.rs  procfile.rs  systemdunit.rs  wsl_interop.rs
distrod/libs/tests/resources/systemdunit/: Makefile  multiple_alias.service  multiple_also_unit.service  simple_alias.service  simple_also_unit.service
distrod/libs/tests/resources/systemdunit/multi-user.target/: aliased.service  multiple_alias2.service  multiple_also_unit.service  referenced_by_also1.service  referenced_by_also2.service  referenced_by_also3.service  referenced_by_also4.service  simple_also_unit.service  simple_unit.service
distrod/libs/tests/resources/systemdunit/system/: multiple_alias.service  multiple_also_unit.service  referenced_by_also1.service  referenced_by_also2.service  referenced_by_also3.service  referenced_by_also4.service  simple_alias.service  simple_also_unit.service  simple_unit.service  systemd-system1.service  unrelated.service
distrod/libs/tests/resources/systemdunit/system/multi-user.target.wants/: aliased.service  multiple_alias2.service  multiple_also_unit.service  referenced_by_also1.service  referenced_by_also2.service  referenced_by_also3.service  referenced_by_also4.service  simple_also_unit.service  simple_unit.service
distrod/libs/tests/resources/systemdunit/units/: referenced_by_also2.service
distrod/misc/: about.hbs  about.toml
distrod/portproxy/: Cargo.toml
distrod/portproxy/src/: main.rs
distrod/src/: procfile.rs
distrod_packer/: distrod_packer
distrod_packer/resources/conf/: distrod.toml
distrod_packer/resources/etc/: portproxy.service
distrod_packer/resources/misc/: distrod-post-update
distrod_packer/resources/run/systemd/system/: portproxy.service
distrod_packer/resources/run/systemd/system/systemd-tmpfiles-clean.service.d/: exclude_wslg_sockets.conf
distrod_packer/resources/run/systemd/system/systemd-tmpfiles-setup.service.d/: exclude_wslg_sockets.conf
distrod_packer/resources/run/tmpfiles.d/: x11.conf
distrod_packer/resources/systemd/: portproxy.service
docs/: references.md
experiment_scripts/: how_to_play_with_systemd.md
storeapp/: .gitignore  DistroLauncher.sln
storeapp/DistroLauncher-Appx/: DistroLauncher-Appx.vcxproj.filters  Distrod.appxmanifest
wintest/: Cargo.toml
