[package]
name = "common"
version = "0.1.0"
authors = ["Takaya Saeki <abc.tkys+pub@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
colored = "2"
log = "0.4"
scraper = "0.12"
reqwest = { version = "0.11", features = ["blocking", "json"] }
