[package]
name = "distrod-exec"
version = "0.1.7"
authors = ["Takaya Saeki <abc.tkys+pub@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libs = { path = "../libs" }
log = "0.4"
env_logger = "0.8"
structopt = { version = "0.3" }
anyhow = "1.0"
nix = "0.20.0"
