[package]
name = "distrod"
version = "0.1.3"
authors = ["Takaya Saeki <abc.tkys+pub@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libs = { path = "../libs" }
structopt = { version = "0.3" }
log = "0.4"
env_logger = "0.8"
anyhow = "1.0"
nix = "0.20.0"
indicatif = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scraper = "0.12"
reqwest = { version = "0.11" }
tokio = { version = "1.10", features = ["rt", "rt-multi-thread", "macros"] }
chrono = "0.4"
xz2 = "0.1"
tar = "0.4.37"
tempfile = "3.0"
regex = "1.0"

[dev-dependencies]
once_cell = "1.8"

[dev-dependencies.reqwest]
version = "0.11"
features = ["blocking"]
