[package]
name = "distrod_wsl_launcher"
version = "0.1.0"
authors = ["Takaya Saeki <tasaeki@microsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libs = { path = "../libs" }
wslapi = "0.1"
structopt = { version = "0.3" }
log = "0.4"
env_logger = "0.8"
strum = { version = "0.20", features = ["derive"] }
anyhow = "1.0"
xz2 = "0.1"
tar = "0.4"
flate2 = "1.0"
chrono = "0.4"
scraper = "0.12"
reqwest = { version = "0.11", features = ["blocking", "json"] }
colored = "2"
tempfile = "3"
bytes = "1.0"
