[package]
name = "distrod_wsl_launcher"
version = "0.1.2"
authors = ["Takaya Saeki <tasaeki@microsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libs = { path = "../libs" }
structopt = { version = "0.3" }
log = "0.4"
env_logger = "0.8"
strum = { version = "0.20", features = ["derive"] }
anyhow = "1.0"
xz2 = "0.1"
tar = "0.4"
flate2 = "1.0"
indicatif = "0.16"
chrono = "0.4"
scraper = "0.12"
reqwest = { version = "0.11" }
tokio = { version = "1.10", features = ["rt", "rt-multi-thread", "macros"] }
colored = "2"
tempfile = "3"
bytes = "1.0"
regex = "1"

[dependencies.windows]
version = "0.25.0"
features = [
    "Win32_Foundation",
	"Win32_System_SubsystemForLinux",
]
