[package]
name = "libs"
version = "0.1.0"
authors = ["Takaya Saeki <abc.tkys+pub@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
colored = "2"
log = "0.4"
scraper = "0.12"
reqwest = { version = "0.11", features = ["blocking", "json"] }
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.4"
once_cell = "1.8"

[target.'cfg(target_os = "linux")'.dependencies]
passfd = "0.1"
nix = "0.20.0"


[dev-dependencies]
tempfile = "3.0"
