[package]
name = "libs"
version = "0.1.0"
authors = ["Takaya Saeki <abc.tkys+pub@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.51"
anyhow = "1.0"
chrono = "0.4"
colored = "2"
log = "0.4"
env_logger = "0.8"
scraper = "0.12"
indicatif = "0.16"
reqwest = { version = "0.11" }
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.20", features = ["derive"] }
systemd-parser= "0.1"
toml = "0.4"
once_cell = "1.8"

[dev-dependencies]
tempfile = "3.0"

[target.'cfg(target_os = "linux")'.dependencies]
passfd = "0.1"
nix = "0.20.0"
procfs = "0.9"
flate2 = "1.0"
tar = "0.4"
