[package]
name = "portproxy"
version = "0.1.0"
authors = ["Takaya Saeki <abc.tkys+pub@gmail.com>"]
edition = "2018"

[dependencies]
libs = { path = "../libs" }
anyhow = "1"
#tokio = { version = "1", features = ["io-util", "net", "rt", "rt-multi-thread"] }
tokio = { version = "1", features = ["full"] }
structopt = { version = "0.3" }
log = "0.4"
env_logger = "0.8"
strum = { version = "0.20", features = ["derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
nix = "0.20.0"
