[package]
name = "portproxy"
version = "0.1.0"
authors = ["Takaya Saeki <abc.tkys+pub@gmail.com>"]
edition = "2018"

[dependencies]
libs = { path = "../libs" }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
# Use my fork until https://github.com/TeXitoi/structopt/issues/490 is resolved
structopt = { git = "https://github.com/nullpo-head/structopt.git" }
log = "0.4"
env_logger = "0.8"
strum = { version = "0.20", features = ["derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
nix = "0.20.0"
